test/modules/shadowing/issue-19167-3-f.good
issue-19167-3-f.chpl:15: In function 'main':
issue-19167-3-f.chpl:16: error: ambiguous call 'f()'
issue-19167-3-f.chpl:8: note: candidates are: f()
issue-19167-3-f.chpl:2: note:                 f()
